--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -198,6 +198,34 @@ header {
 		transition: border-bottom 0.2s;
 }
 
+/*-------------------------------------------------*/
+/* REUSABLE COMPONENTS*/
+/*-------------------------------------------------*/
+
+.meals-showcase {
+		list-style: none;
+		width: 100%;
+}
+
+.meals-showcase li {
+		display: block;
+		float: left;
+		width: 25%;
+}
+
+.meal-photo {
+		width: 100%;
+		margin: 0;
+}
+
+.meal-photo img {
+		width: 100%;
+		height: auto;
+}
+
+
+
+
 /*------------------------------*/
 /* ICONS */
 /*------------------------------*/
