created the plan section and added new classes to the ionicons for the section called check-x-icons

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -412,3 +412,8 @@ ion-icon {
 		vertical-align: middle;
 		margin-top: 6px;
 }
+
+/* CHECK-X-ICONS for the section-plans icons section*/
+.check-x-icons {
+		font-size: 10px;
+}
