--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -476,7 +476,63 @@ input[type=checkbox] {
 
 *:focus {outline: none;}
 
+/*------------------------------*/
+/* FOOTER */
+/*------------------------------*/
 
+footer {
+		background-color: #333;
+		padding: 50px;
+		font-size: 80%;
+}
+
+.footer-nav {
+		list-style: none;
+		float: left;
+}
+
+.social-links {
+		list-style: none;
+		float: right;
+}
+
+.footer-nav li,
+.social-links li {
+		display: inline-block;
+		margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+		margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+		text-decoration: none;
+		border: 0;
+		color: #888;
+		transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+		color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+		font-size: 160%;
+}
+
+
+footer p {
+		color: #888;
+		text-align: center;
+		margin-top: 20px;
+}
 
 /*------------------------------*/
 /* ICONS */
@@ -502,6 +558,31 @@ ion-icon {
 		margin-top: 6px;
 }
 
+.social-icons {
+		display: inline-block;
+		width: 30px;
+		text-align: center;
+		color: #888;
+		font-size: 120%;
+		transition: color 0.7s;
+}
+
+/* This is for the hover collor effect in the footer */
+.social-fb:hover {
+		color: #3b5998;
+}
+
+.social-tw:hover {
+		color: #55acee;
+}
+
+.social-gp:hover {
+		color: #dd4b39;
+}
+
+.social-ig:hover {
+		color: #8a3ab9;
+}
 
 
 
